fixed user index wrapping

--- a/static/user/index.css
+++ b/static/user/index.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     max-width: 80em;
+    flex-wrap: wrap;
+    margin: 0 3em;
 }
 
-.profiles-index > :not(:last-child) {
-    margin-right: 2em;
-}
+
